tests/ui/imports/import-trait-method.stderr
error[E0658]: `use` associated items of traits is unstable
  --> $DIR/import-trait-method.rs:5:5
   |
LL | use Foo::foo;
   |     ^^^^^^^^
   |
   = note: see issue #134691 <https://github.com/rust-lang/rust/issues/134691> for more information
   = help: add `#![feature(import_trait_associated_functions)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0283]: type annotations needed
  --> $DIR/import-trait-method.rs:7:13
   |
LL | fn main() { foo(); }
   |             ^^^^^ cannot infer type
   |
   = note: cannot satisfy `_: Foo`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0283, E0658.
For more information about an error, try `rustc --explain E0283`.
